--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ixgbe-driver"
+name = "igb_driver"
 version = "0.1.0"
 edition = "2021"
 authors = ["KuangjuX <kuangjux@outlook.com>"]
@@ -11,13 +11,15 @@ log = "0.4"
 bit_field = "0.10.2"
 volatile = "0.3"
 core_detect = "1.0.0"
+spin = "0.9"
+axdriver_base = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.0" }
 
 [dependencies.smoltcp]
 git = "https://github.com/rcore-os/smoltcp.git"
 default-features = false
 rev = "2ade274"
 features = ["alloc", "log","medium-ethernet","proto-ipv4","socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dns"]
-    
+
 
 
 [features]
